--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "farmhash": "^1.1.0",
     "metrics": "^0.1.8",
     "node-uuid": "^1.4.3",
-    "toobusy": "^0.2.4",
+    "toobusy-js": "^0.5.0",
     "uber-hammock": "^1.0.0",
     "underscore": "^1.5.2"
   },
